fix jumpiness on language change

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,3 +1,11 @@
+.MainTitle {
+  line-height: 1.75rem;
+  height: 4rem;
+  display: flex;
+  align-items: center;
+  flex-grow: 0;
+}
+
 .LanguageAndLink {
   display: flex;
   gap: 1rem;
